# facai

./: .gitignore  AGENTS.md  INSTALL.md  README.md  install.sh  install_mcp.py  pyproject.toml
app/: __init__.py  __main__.py  app.py  logging_utils.py  models.py  portfolio.py  pricing.py  proxy.py  scheduler.py  yahoo.py
data/: portfolio.yaml  sample_portfolio.yaml
mcp_server/: __init__.py  client.py  server.py
portfolio_mcp/: .__main__.py.swp  .config.py.swp  .proxy.py.swp  .server.py.swp  __init__.py  __main__.py  app.py  chinese_search.py  config.py  logging_utils.py  models.py  pricing.py  proxy.py  scheduler.py  server.py  yahoo.py  yfinance_utils.py
tests/: conftest.py  test_app.py  test_search.py  test_server.py
