[project]
name = "facai-portfolio-mcp"
version = "0.1.0"
description = "Personal asset tracking MCP server that refreshes stock prices and exposes portfolio tools."
readme = "README.md"
authors = [{name = "Facai User"}]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "requests>=2.31",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
]

[project.scripts]
portfolio-mcp = "portfolio_mcp.__main__:main"

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["portfolio_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "portfolio_mcp",
    "data",
    "README.md",
    "pyproject.toml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
